--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p I like to play games and watch movies.
+
+  body 
+  button(type="button", class="btn btn-success") Press Me
