--- a/views/index.pug
+++ b/views/index.pug
@@ -4,5 +4,16 @@ block content
   h1= title
   p I like to play games and watch movies.
 
-  body 
-  button(type="button", class="btn btn-success") Press Me
+  
+  button(type="button", class="btn btn-success" onclick ="doReduce()") Press Me
+  br
+  div#reduce Reduce the value
+
+  script.  
+    var count = 20
+    var change = -1
+    function doReduce() {
+      count += change;
+      change--;
+       document.getElementById("reduce").innerHTML = "Count " + count + " with change " + change;
+     }
