--- a/views/handbags.pug
+++ b/views/handbags.pug
@@ -8,8 +8,13 @@ block content
   div(class="container-fluid")
   div(class="row")
     each item,index in results
-      div(class="col-sm-2")
+      div(class="col-sm-2" onclick=`buy(${index})`)
         p Brand: #{item.brand}
         p Model: #{item.model}
         p Color: #{item.color}
         p Price: $#{item.price}
+  script.
+    function buy(index)
+    {
+      alert(`You purchased Item ${index+1}`)
+    }
